improve harness